crates/cruster/tests/ui/activity_public_invalid.stderr
error: #[activity] cannot be #[public]
  --> tests/ui/activity_public_invalid.rs:11:5
   |
11 |     async fn bad(&self) -> Result<(), autopilot_cluster::error::ClusterError> {
   |     ^^^^^
